--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -1,4 +1,9 @@
 seminars:
+  - title: "Deep Learning for convex optimisation (and beyond)"
+    speaker: "Sebastian Banert (Lund University, Sweden)"
+    url: "https://bath-numerical-analysis.github.io/events/current_seminars.html"
+    date: 2021-10-29 12:15
+    location: "Zoom"
   - title: "A framework for analyzing variance reduced stochastic gradient methods and a new one"
     speaker: "Jingwei Liang (Shanghai Jiao Tong University, China)"
     url: "https://bath-numerical-analysis.github.io/events/current_seminars.html"
