--- a/_data/people.yml
+++ b/_data/people.yml
@@ -115,6 +115,10 @@ faculty:
     url: "https://vinaypn.github.io/"
     name:  "Vinay Namboodiri"
     topics: "multi-modal learning, visual recognition, sparse supervision, probabilistic adversarial techniques, explainable AI"
+  - img: "images/bubba.jpg"
+    url: "https://people.bath.ac.uk/tab73/"
+    name:  "Tatiana Bubba"
+    topics: "Tomographic inverse problems,	Sparse regularisation and optimisation, 	Deep learning in imaging"
 researchers:
   - name: "Eleanor Barry"
     working: "Jonathan Bartlett"
