--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 items:
+  - date: "2022-08-11"
+    text: "**[Analytical and Geometric Approaches](https://bathsymposium.ac.uk/symposium/analytic-and-geometric-approaches-to-machine-learning/)** Five-day workshop 26-30 July 2022. "
+    critical: true 
   - date: "2022-04-21"
     text: "**[Maths4DL Launch](https://people.bath.ac.uk/mascjb/maths4dl.html)** To launch Maths4DL, we are organising a two-day hybrid opening workshop on 21st-22nd April. "
     critical: true 
