--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,9 @@ theme: minima
 plugins:
   - jekyll-feed
 
+collections:
+  events:
+    output: true
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
