--- a/_data/people.yml
+++ b/_data/people.yml
@@ -11,6 +11,10 @@ faculty:
     url: "https://researchportal.bath.ac.uk/en/persons/luca-zanetti"
     name:  "Luca Zanetti"
     topics: "algorithms for network analysis, clustering, Markov chains, spectral graph theory"
+  - img: "images/yury.jpg"
+    url: "https://yury-korolev.gitlab.io/"
+    name:  "Yury Korolev"
+    topics: "Inverse problems and imaging,  Machine learning in infinite dimensions, Non-smooth variational problems"
   - img: "images/Pizzoferrato.jpg"
     url: "https://researchportal.bath.ac.uk/en/persons/andrea-pizzoferrato"
     name:  "Andrea Pizzoferrato"
