--- a/_data/news.yml
+++ b/_data/news.yml
@@ -10,6 +10,9 @@ items:
   - date: "2022-04-21"
     text: "**[Maths4DL Launch](https://people.bath.ac.uk/mascjb/maths4dl.html)** To launch Maths4DL, we are organising a two-day hybrid opening workshop on 21st-22nd April. "
     critical: true 
+  - date: "2021-05-06"
+    text: "**[Estimating functions from data](https://mathematics-and-algorithms-for-data.github.io/events/workshop2/)** One-day online  workshop on 11th May 2021. "
+    critical: true     
   - date: "2019-09-01"
     text: "We will be having a launch event on Wednesday 13th November, please find details of the event  [here](__/events/launch_event/)."
     critical: false
