--- a/_data/people.yml
+++ b/_data/people.yml
@@ -57,6 +57,14 @@ rough analysis"
     url: "http://people.bath.ac.uk/ee224/"
     name:  "Evangelos Evangelou"
     topics: "Linear models, geostatistics, time series"
+  - img: "images/christian.png"
+    url: "https://researchportal.bath.ac.uk/en/persons/christian-rohrbeck/"
+    name:  "Christian Rohrbeck"
+    topics: "Bayesian computing, Environmental modelling, Extreme value analysis, Spatial statistics"
+  - img: "images/emiko.jpg"
+    url: "https://researchportal.bath.ac.uk/en/persons/emiko-dupont/"
+    name:  "Emiko Dupont"
+    topics: "spatial statistics, wavelets, machine learning, environmental applications"
   - img: "images/silvia.JPG"
     url: "http://people.bath.ac.uk/sg968/"
     name:  "Silvia Gazzola"
