--- a/_data/people.yml
+++ b/_data/people.yml
@@ -3,6 +3,10 @@ faculty:
     url: "https://people.bath.ac.uk/mapamgc"
     name:  "Alexander Cox"
     topics: "Stochastic control, Monte Carlo methods, optimal transport"
+  - img: "images/jie.jpg"
+    url: "https://researchportal.bath.ac.uk/en/persons/jie-zhang"
+    name:  "Jie Zhang"
+    topics: "Algorithmic game theory, Digital economy, Blockchain protocols"
   - img: "images/karim.jpg"
     url: "https://researchportal.bath.ac.uk/en/persons/karim-anaya-izquierdo"
     name:  "Karim Anaya-Izquierdo"
