--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -1,4 +1,8 @@
 seminars:
+  - title: "Design and Recognition of Microgestures for Always-Available Input"
+    speaker: "Adwait Sharma (Bath)"
+    date: 2023-02-22 16:00
+    location: "4W 1.7 Wolfson"
   - title: "Machine learning with probability generating functions"
     speaker: "Theodore Papamarkou (Manchester)"
     date: 2022-11-30 16:00
