--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -2,11 +2,11 @@ seminars:
   - title: "Spatiotemporal decoding of neural signals"
     speaker: "Benjamin Metcalfe (Bath)"
     date: 2023-04-19 16:00
-    location: "3WN 3.7"
+    location: "4W 1.7 Wolfson"
   - title: "Isotropic kernels with non-Euclidean metric"
     speaker: "Vangelis Evangelou (Bath)"
     date: 2023-03-08 16:00
-    location: "3WN 3.7"
+    location: "4W 1.7 Wolfson"
   - title: "Design and Recognition of Microgestures for Always-Available Input"
     speaker: "Adwait Sharma (Bath)"
     date: 2023-02-22 16:00
