--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -1,5 +1,10 @@
 seminars:
-  - title: "The Scattering Transform with applications to Quantum Chemistry"
+  - title: "Physics Inspired Graph Neural Networks"
+    speaker: "James Rowbottom (University of Cambridge)"
+    date: 2023-11-15 16:15
+    location: "4W 1.7 Wolfson"
+    note: "The visit of the seminar speaker is sponsored by Maths4DL."
+- title: "The Scattering Transform with applications to Quantum Chemistry"
     speaker: "Georgios Exarchakis (University of Bath)"
     date: 2023-11-01 16:15
     location: "4W 1.7 Wolfson"
