--- a/_data/people.yml
+++ b/_data/people.yml
@@ -121,10 +121,6 @@ rough analysis"
     url: "https://researchportal.bath.ac.uk/en/persons/xi-chen"
     name:  "Xi Chen"
     topics: "Bayesian inference & reasoning, machine learning, statistical signal processing, Monte Carlo methods, probabilistic sampling techniques"
-  - img: "images/olga.jpg"
-    url: "https://olgaisupova.github.io/"
-    name:  "Olga Isupova"
-    topics: "Bayesian methods, topic models, unsupervised learning, ML for conversation"
   - img: "images/vinay.png"
     url: "https://vinaypn.github.io/"
     name:  "Vinay Namboodiri"
@@ -224,3 +220,8 @@ researchers:
     working: "Sergey Dolgov"
   - name: "Oliver Townsend"
     working: "Silvia Gazzola and Sergey Dolgov"
+old:
+  - img: "images/olga.jpg"
+    url: "https://olgaisupova.github.io/"
+    name:  "Olga Isupova"
+    topics: "Bayesian methods, topic models, unsupervised learning, ML for conversation"
