--- a/_data/people.yml
+++ b/_data/people.yml
@@ -28,7 +28,7 @@ faculty:
     name:  "Luca Zanetti"
     topics: "algorithms for network analysis, clustering, Markov chains, spectral graph theory"
   - img: "images/james_f.jpg"
-    url: "https://researchportal.bath.ac.uk/en/persons/james-foster"
+    url: "https://people.bath.ac.uk/jmf68/"
     name:  "James Foster"
     topics: "stochastic differential equations, 
 machine learning,
