--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -1,4 +1,8 @@
 seminars:
+  - title: "Supervised and unsupervised sampling for approximate linear algebra"
+    speaker: "Bertrand Gauthier (Cardiff University)"
+    date: 2023-11-29 16:15
+    location: "4W 1.7 Wolfson"
   - title: "Physics Inspired Graph Neural Networks"
     speaker: "James Rowbottom (University of Cambridge)"
     date: 2023-11-15 16:15
