--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -1,4 +1,8 @@
 seminars:
+  - title: "Knowledge-based learning for model parameter selection in linear inverse problems"
+    speaker: "Alexandra Koulouri (Tampere University)"
+    date: 2024-02-21 16:15
+    location: "4W 1.7 Wolfson"
   - title: "Supervised and unsupervised sampling for approximate linear algebra"
     speaker: "Bertrand Gauthier (Cardiff University)"
     date: 2023-11-29 16:15
