--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 items:
+  - date: "2024-03-25"
+    text: "**[Dynamics, data, and deep Learning](https://maths4dl.ac.uk/newsevents/dynamics-data-and-deep-learning-workshop-25-26-march-2024/)** Two-day workshop 25-26 September 2024."
+    critical: true 
   - date: "2022-09-20"
     text: "**[Deep Learning in Environmental Settings](https://people.bath.ac.uk/td314/envdl/envDL.html)** Two-day workshop 20-21 September 2022."
     critical: true 
