--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -7,7 +7,7 @@ seminars:
     speaker: "Matteo Santacesaria (University of Genoa)"
     date: 2024-04-17 16:15
     location: "TBC"
-  - title: "TBA"
+  - title: "Statistics and Computation of Learning in Extreme-scale classification"
     speaker: "Rohit Babbar (University of Bath)"
     date: 2024-03-20 16:15
     location: "4W 1.7 Wolfson"
