--- a/_data/news.yml
+++ b/_data/news.yml
@@ -7,7 +7,7 @@ items:
     critical: true 
   - date: "2022-09-12"
     text: "**[Statistical Learning and Differential Privacy](/events/workshop_SLDP2022/)** Two-day workshop 12-13 September 2022. "
-    critical: true 
+    critical: false
   - date: "2022-07-26"
     text: "**[Analytical and Geometric Approaches to ML](https://bathsymposium.ac.uk/symposium/analytic-and-geometric-approaches-to-machine-learning/)** Five-day workshop 11-15 July 2022. "
     critical: false
