add seminar info for 17 Apr

--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -3,10 +3,10 @@ seminars:
     speaker: "Oliver Feng (University of Bath)"
     date: 2024-05-01 16:15
     location: "TBC"
-  - title: "TBA"
+  - title: "On the sample complexity of inverse problems"
     speaker: "Matteo Santacesaria (University of Genoa)"
     date: 2024-04-17 16:15
-    location: "TBC"
+    location: "1W 2.101 (note the unusual location!)"
   - title: "Statistics and Computation of Learning in Extreme-scale classification"
     speaker: "Rohit Babbar (University of Bath)"
     date: 2024-03-20 16:15
