update details of Olivers talk

--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -1,8 +1,8 @@
 seminars:
-  - title: "TBA"
+  - title: "Optimal convex M-estimation via score matching"
     speaker: "Oliver Feng (University of Bath)"
     date: 2024-05-01 16:15
-    location: "TBC"
+    location: "1W 2.102 (note the unusual location!)"
   - title: "On the sample complexity of inverse problems"
     speaker: "Matteo Santacesaria (University of Genoa)"
     date: 2024-04-17 16:15
