--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -1,4 +1,8 @@
 seminars:
+  - title: "TBA"
+    speaker: "Henry Reeve (University of Bristol)"
+    date: 2024-11-14 12:15
+    location: "4W 1.7 Wolfson"
   - title: "Dynamic CT Image Reconstruction with Neural Fields"
     speaker: "Pablo Arratia Lopez (University of Bath)"
     date: 2024-10-31 12:15
