--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -1,5 +1,5 @@
 seminars:
-  - title: "TBA"
+  - title: "Adaptive classification for non-stationary label-shift and a local Dvoretzky--Kiefer--Wolfowitz--Massart inequality"
     speaker: "Henry Reeve (University of Bristol)"
     date: 2024-11-14 12:15
     location: "4W 1.7 Wolfson"
